kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-joymify
  labels:
    app: www-joymify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www-joymify
  template:
    metadata:
      labels:
        app: www-joymify
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: www-joymify
          image: ghcr.io/montionugera/${SERVICE_NAME}:${COMMIT_SHA1}
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
