kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-joymify
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - joymify.com
        - www.joymify.com
      secretName: www-joymify-tls
  rules:
    - host: joymify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www-joymify
                port:
                  number: 80
    - host: www.joymify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www-joymify
                port:
                  number: 80
